--- a/css/screen.css
+++ b/css/screen.css
@@ -1,53 +1,75 @@
-body{
-	background-color: rgba(218, 223, 225,1);
+body {
+    background-color: rgba(16, 77, 101, 0.521);
 }
-a,a:link,a:active,a:visited,a:hover{
-  text-decoration:none;
+
+a,
+a:link,
+a:active,
+a:visited,
+a:hover {
+    text-decoration: none;
 }
-input[type='text']{
-	border: 3px solid rgba(1, 152, 117,0.8);
-	height: 65px;
+
+input[type='text'] {
+    border: 3px solid rgba(58, 125, 110, 0.8);
+    height: 65px;
 }
-input[type='text']:focus{
-	border: 3px solid rgba(1, 152, 117,0.8);
+
+input[type='text']:focus {
+    border: 3px solid rgba(93, 185, 164, 0.8);
 }
-.input-group-addon{
-	margin: 0px;
-	padding: 0px;
+
+.input-group-addon {
+    margin: 0px;
+    padding: 0px;
 }
-#heading{
-	padding-bottom: 25px;
+
+#heading {
+    padding-bottom: 25px;
 }
-#heading h1{
-	color: rgba(1, 152, 117,1);
+
+#heading h1 {
+    color: rgba(41, 41, 97, 1);
 }
-#search{
-	padding: 15px 35px;
-	background-color: rgba(1, 152, 117,0.8);
-	border:3px;
+
+#search {
+    padding: 15px;
+    background-color: rgba(1, 152, 117, 0.8);
+    border: 3px;
 }
-#search i{
-	font-size:30px; color:rgba(238, 238, 238,0.8);
+
+#search i {
+    font-size: 30px;
+    color: rgba(238, 238, 238, 0.8);
 }
-#random h2{
-  margin:0px;
-  color: rgba(1, 152, 117,0.8);
+
+#random h2 {
+    margin: 0px;
+    color: rgb(41, 41, 97);
 }
-#random i{
-  padding:12px 25px;
-  border-radius:10px;
-  color:rgba(238, 238, 238,0.8);
-  background-color:rgba(1, 152, 117,0.8);
+
+#random i {
+    padding: 12px 25px;
+    border-radius: 10px;
+    color: rgb(41, 41, 97);
+    background-color: rgba(1, 152, 13, 0.8);
 }
-#res{
-	padding: 25px 0px;
+
+#res {
+    padding: 25px 0px;
 }
-#resultdiv{
-  background-color:rgba(1, 152, 117,0.8);
-  border-radius:5px;
-  margin:25px auto;
-  padding:15px 30px;
+
+#resultdiv {
+    background-color: rgba(95, 70, 130, 0.8);
+    border-radius: 5px;
+    margin: 25px auto;
+    padding: 15px 30px;
 }
-#resultdiv a{
-  color:rgba(255,255,255,0.9);
+
+#resultdiv a {
+    color: rgb(56, 206, 158);
+}
+
+h5 a {
+    color: #0c2d42
 }
